maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:12: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
 	droite();
        ^Escaper:14: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
 	gauche();
        ^Escaper:15: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
 	return flag;
        ^